Fix Jenkinsfile: remove pip install and use-container flag

--- a/jenkins-data-pipeline/Jenkinsfile
+++ b/jenkins-data-pipeline/Jenkinsfile
@@ -23,11 +23,8 @@ pipeline {
             steps {
                 echo '🏗️ Building SAM application...'
                 sh '''
-                    echo "Installing dependencies..."
-                    pip install -r src/requirements.txt
-                    
                     echo "Running SAM build..."
-                    sam build --use-container
+                    sam build
                 '''
             }
         }
